# srt-linebreak-tweaker

./: CMakeLists.txt  README.md
i18n/: linebreak_reorganizer_zh_CN.ts
src/: commands.cpp  commands.h  common.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  reorganizer.cpp  reorganizer.h  rint.h  statusnotify.cpp  statusnotify.h  util.cpp  util.h  wavdecoder.cpp  wavdecoder.h
